fix all white space issues across all pages

--- a/main.css
+++ b/main.css
@@ -3,13 +3,6 @@ font-family: 'Helvetica';
 text-decoration: none;
 }
 
-/*div {
-
-   overflow: scroll;
-}*/
-
-
-
 
 h1{
    font-size:24px;
@@ -18,7 +11,8 @@ h1{
 h2 {
   font-size:19px;
   color: rgb(140, 140, 140);
-
+padding: 10px, 0px;
+margin: 0px;
 }
 
 h3{
@@ -33,7 +27,7 @@ color:  rgb(100, 100, 100)
 }
 
 .nav container {
-height: 40px;
+height: 35px;
 
 }
 
@@ -92,7 +86,7 @@ margin-bottom: 0px;
 
 .nav  {
       background-color: #f7f7f7;
-  height: 40px;
+  height: 35px;
 
 }
 
@@ -108,14 +102,10 @@ margin-bottom: 0px;
   background-color: blue;
   background-image: url('images/Computer-dr.jpg');
   background-size: 1009px 110px;
-
+margin-top: 5px;
 
 }
 
-.jumbotron .container {
-
-  height: 110px;
-}
 
 .jumbotron h1 {
    padding-top: 20px;
@@ -145,15 +135,28 @@ margin-top: 0px;
 #profile {
   background-color: #f7f7f7;
   position: relative;
-  top: 10px;
-  height: 220px;
+    height: 220px;
+margin-top: 5px;
+}
 
+#contactbox {
+  background-color: #f7f7f7;
+  position: relative;
+    height: 500px;
+margin-top: 5px;
+}
+
+#locationbox {
+  background-color: #f7f7f7;
+  position: relative;
+    height: 400px;
+margin-top: 5px;
 }
 
 
  .profileImage {
   width: 450px;
-  height: 200px;
+  height: 180px;
   background-image: url('././images/computerMan.jpg');
   background-repeat: no-repeat;
   background-size: 400px 250px;
@@ -165,19 +168,19 @@ margin-top: 0px;
 #services {
   background-color: #f7f7f7;
   position: relative;
-  top: 10px;
-  height: 200px;
-  margin-top: 10px;
+    height: 200px;
+  margin-top: 5px;
 
 }
 #services .container {
 padding-top: 5px;
 }
 
-#services h2 {
-
-margin: 18px 0px;
+ h2 {
+position: relative;
+padding: 10px 0px;
 }
+
 #services h3 {
 
 margin: 0px 0px;
@@ -188,18 +191,8 @@ margin: 0px 0px;
 padding-right: 5px;
 
 }
-.big {
-  background-color: #f7f7f7;
-  position: relative;
-  top: 10px;
-  height: 500px;
 
-}
 
-.big .container h2{
-padding-bottom: 20px;
-
-}
 .sub-header h2{
   /*font-family: 'Oxygen Mono',serif;*/
 /*  font-size:18px;*/ 
